--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.2.0"
+    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.4.6",
+    "react-router-dom": "^7.2.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
